[package]
name = "ec-client"
description = "A client for the Ellipticoin API"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]
edition = "2018"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.18"
rust-crypto = "0.2.36"
serde = { version = "1.0.90", features = ["derive"] }
serde_bytes = "0.11.1"
serde_cbor = "0.9.0"
